objects/TransactionSummaryByProduct__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales by Product Detail</relationshipLabel>
        <relationshipName>Sales_By_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Product__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirmType__c</fullName>
        <formula>TEXT(Contact__r.FirmType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Firm Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(Contact__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales by Product Detail</relationshipLabel>
        <relationshipName>Sales_By_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentAssets__c</fullName>
        <label>Current Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAverageAssets__c</fullName>
        <label>Current Average Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DLRSFlag__c</fullName>
        <description>Product DLRS flag to be used in DLRS.</description>
        <formula>Product__r.DLRSFlag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DLRS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales by Product Detail</relationshipLabel>
        <relationshipName>Sales_by_Product_Detail_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundCompany__c</fullName>
        <formula>Product__r.FundCompany__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTDPurchases__c</fullName>
        <label>MTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTDRedemptions__c</fullName>
        <label>MTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P2WeekAssets__c</fullName>
        <label>P2 Week Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P2YearPurchases__c</fullName>
        <label>P2 Year Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P3YearPurchases__c</fullName>
        <label>P3 Year Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P4YearPurchases__c</fullName>
        <label>P4 Year Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PardotProductName__c</fullName>
        <description>This field was created to display the Product__c Lookup.</description>
        <formula>Product__r.Description</formula>
        <label>Pardot Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PardotYTDandPYPurchases__c</fullName>
        <formula>YTDPurchases__c  +  PriorYearPurchases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pardot YTD and PY Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Group__c</fullName>
        <description>To Integrate Platform Group to use to filter serviced versus non-serviced sales</description>
        <label>Platform Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorDayPurchases__c</fullName>
        <label>Prior Day Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorDayRedemptions__c</fullName>
        <label>Prior Day Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorMonthAssets__c</fullName>
        <label>Prior Month Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorMonthAverageAssets__c</fullName>
        <label>Prior Month Average Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorMonthPurchases__c</fullName>
        <label>Prior Month Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorMonthRedemptions__c</fullName>
        <label>Prior Month Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorWeekAssets__c</fullName>
        <label>Prior Week Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorWeekPurchases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Week Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorWeekRedemptions__c</fullName>
        <label>Prior Week Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYTDPurchases__c</fullName>
        <label>Prior YTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYTDRedemptions__c</fullName>
        <label>Prior YTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearAssets__c</fullName>
        <label>Prior Year Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearAverageAssets__c</fullName>
        <label>Prior Year Average Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearPurchases__c</fullName>
        <label>Prior Year Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearRedemptions__c</fullName>
        <label>Prior Year Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <formula>text(Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_By_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTDPurchases__c</fullName>
        <label>QTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QTDRedemptions__c</fullName>
        <label>QTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12MTDPurchases__c</fullName>
        <label>R12 MTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R12MTDRedemptions__c</fullName>
        <label>R12 MTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R36MTDPurchases__c</fullName>
        <label>R36 MTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R36MTDRedemptions__c</fullName>
        <label>R36 MTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SaleId__c</fullName>
        <externalId>true</externalId>
        <label>Sale Id</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTDPurchases__c</fullName>
        <label>WTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WTDRedemptions__c</fullName>
        <label>WTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2PriorPurchases__c</fullName>
        <label>Y2 Prior Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2PriorRedemptions__c</fullName>
        <label>Y2 Prior Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDPurchases__c</fullName>
        <label>YTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDRedemptions__c</fullName>
        <label>YTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Purchases and Asset data MTD, YTD &amp; PY rolled up by rep, office, firm, product type and product group not at the territory level.  API Name TransactionSummaryByProduct.  This object is populated from MS.NA_SALES_PROD_SF TABLE which is derived from  ‘MARS.MS_REP_SALES_SUM_PERIOD’. The data includes Rebalances which are tagged, usually at month end. All Prod Types but not 'MA Non Eligible' &amp; 'MF No Fee'. Data includes non-serviced assets and sales of Firm Type = Direct L, Direct O and MARS Platform Group = MF No Load Retail and Offshore.</description>
    <label>Sales by Product Detail (R)</label>
    <nameField>
        <displayFormat>TP-{0000000000}</displayFormat>
        <label>Transaction by Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales by Product Detail (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>